tests/paczka1/small_fuzzy/88422712.err
Error in line 4: 57RC64 S854 1,1
Error in line 13: O6evD0N8Lc S943 20,99
